--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
-PORT=6000
-DATABASE_URL=mongodb+srv://mstf:mstf123@cluster0.pfzhwqr.mongodb.net/db
+PORT=5000
+DATABASE_URL=mongodb+srv://mstf:mstf123@cluster0.pfzhwqr.mongodb.net/db?retryWrites=true&w=majority
+
